Fix apple page on mobile

--- a/styles/src/project-detail/shared.less
+++ b/styles/src/project-detail/shared.less
@@ -60,13 +60,26 @@
       padding-right: 4vw;
     }
 
-    .sqs-col-4 {
-      width: 100%;
-      margin: 25px 0;
+    .sqs-block-html {
+      &:last-child { margin-bottom: 30px; }
     }
 
-    .sqs-col-10 {
+    .sqs-col-1,
+    .sqs-col-2,
+    .sqs-col-3,
+    .sqs-col-4,
+    .sqs-col-5,
+    .sqs-col-6,
+    .sqs-col-7,
+    .sqs-col-8,
+    .sqs-col-9,
+    .sqs-col-10,
+    .sqs-col-11 {
       width: 100%;
+    }
+
+    .sqs-col-4 {
+      margin: 25px 0;
     }
 
     .sqs-block-horizontalrule {
@@ -87,14 +100,14 @@
         flex-wrap: nowrap;
       }
 
-      .sqs-col-4 {
-        width: 33.33%;
-        margin: 0;
-      }
-
-      .sqs-col-10 {
-        width: 83.3333&;
-      }
+      .sqs-col-1 { width: 8.3333%; }
+      .sqs-col-2 { width: 16.666%; }
+      .sqs-col-3 { width: 25%; }
+      .sqs-col-4 { width: 33.333%; }
+      .sqs-col-5 { width: 41.666%; }
+      .sqs-col-6 { width: 50%; }
+      .sqs-col-7 { width: 58.333%; }
+      .sqs-col-10 { width: 83.333%; }
 
       .sqs-block-spacer {
         height: auto;
